# final_project

./: .env.example  .gitignore  README.md  pyproject.toml  test.ipynb  utils.py
works/Doha/: comment_filter_agent_v0.3.py  comment_filter_agent_v0.5.py  comment_filter_agent_v0_6.py
works/Haeun/: 00.IT-CompanyList_test.ipynb  00.IT-CompanyList_test.py  00.IT-CompanyList_확인용.ipynb  00.python-CompanyList_test_배치-기초모델.py  00.python-CompanyList_test_배치.py  00.python-IT-CompanyList_test_배치-개선모델.py  00.python-IT-CompanyList_test_배치.py  00.python-IT-CompanyList_test_순차.py  00.python-IT-CompanyList_배치-기초모델v1.py  01.python-FOOD-CompanyList_배치-개선모델.py  01.python-IT-CompanyList_배치-개선모델.py  01.python-통합-CompanyList_배치-개선모델v2.py  02.FOOD-CompanyList_basic-stats.ipynb  02.Food-CompantList_중복데이터_제거.ipynb  02.IT-CompanyList_basic-stats.ipynb  02.instream_classifier.py  03.Video-Classification_Model.py  06.comment_filter_agent.py  07.comment-emotion-agent.py  260502_FnB-longforms_EDA.ipynb  260502_FnB-shorts_EDA.ipynb  260502_IT-longforms_EDA.ipynb  260502_IT-shorts_EDA.ipynb  260503_shorts-sampling_idea.ipynb  Vertex_AI-Company_test_개선모델.py  instream_classifier-model.py  trial_1.ipynb  개인작업용.ipynb  개인작업용_댓글감성분석_테스트샘플제작용.ipynb  개인작업용_댓글감성분석_테스트샘플제작용_언어혼용.ipynb  개인작업용_롱폼_썸네일이미지분석_테스트샘플제작용.ipynb  개인작업용_숏퐁롱폼-분리용.ipynb  개인작업용_인스트림광고상세정보추출용.ipynb
works/Haeun/Dashboard/: dashboard_ML_v1.py  longform_predict_v1.py  longform_predict_v2.py  longform_predict_v3.py  shorts_analysis_guideline_v1.py  shorts_analysis_guideline_v2.py  thumbnail_analysis-upgrade_v1.py  thumbnail_analysis-upgrade_v2.py  thumbnail_analysis-upgrade_v3.py  thunbnail_generation_v1.py  utills_thumbnail.py  utills_thumbnail_v2.py
works/Haeun/analysis_stats+ML/: Analysis_Plans.md  FnB-longform_analysis.ipynb  FnB-shortform_analysis.ipynb  IT-longform_analysis.ipynb  IT-shortform_analysis.ipynb  ML-modeling-longform.ipynb  ML-modeling-shorts.ipynb
works/Haeun/thumbnail_analysis/: 08-thumbnail_analysis-agent.py
works/Heesang/: 20260422 정리.ipynb  Youtube_API.ipynb  instream_classifier.py  instream_classifier_v3.py  working.ipynb  전처리 및 파일분리.ipynb
works/Hyeong_Uk/: test_classify.py
(+38 files in other folders)
