[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "cffi>=2.0.0",
    "cryptography>=46.0.7",
    "distro>=1.9.0",
    "genai-prices>=0.0.56",
    "google-auth>=2.49.1",
    "google-genai>=1.70.0",
    "google-generativeai>=0.8.6",
    "griffelib>=2.0.2",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "importlib-metadata>=8.7.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "konlpy>=0.6.0",
    "logfire-api>=4.31.0",
    "matplotlib>=3.10.8",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "opentelemetry-api>=1.39.1",
    "pandas>=3.0.2",
    "pingouin>=0.6.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pyasn1>=0.6.3",
    "pyasn1-modules>=0.4.2",
    "pycparser>=3.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.78.0",
    "pydantic-ai-slim>=1.78.0",
    "pydantic-core>=2.41.5",
    "pydantic-graph>=1.78.0",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sniffio>=1.3.1",
    "spacy>=3.8.14",
    "statsmodels>=0.14.6",
    "threadpoolctl>=3.6.0",
    "typing-inspection>=0.4.2",
    "websockets>=16.0",
    "xgboost>=3.2.0",
    "zipp>=3.23.0",
]
